--- a/docs/math/sketches/3/1.qmd
+++ b/docs/math/sketches/3/1.qmd
@@ -28,7 +28,7 @@ Count the number of non-ID columns in the following database and compare to the 
 |  102  | IT    | 3    |
 
 
-\begin{tikzcd}Mngr \circlearrowright \underset{Employee}{\bullet}\arrow[rr, "WorksIn", bend left] \arrow[rd, "FName"'] &                        & \underset{Dept}{\bullet} \arrow[ll, "Secr"]\arrow[ld, "DName"] \\                                                                                                         & \overset{string}{\circ} &                                                                           \end{tikzcd}
+\begin{tikzcd} \pagecolor{white} Mngr \circlearrowright \underset{Employee}{\bullet}\arrow[rr, "WorksIn", bend left] \arrow[rd, "FName"'] &                        & \underset{Dept}{\bullet} \arrow[ll, "Secr"]\arrow[ld, "DName"] \\                                                                                                         & \overset{string}{\circ} &                                                                           \end{tikzcd}
 
 
 ::: {.callout-note collapse=true appearance="minimal"}
