--- a/docs/math/sketches/4/5.qmd
+++ b/docs/math/sketches/4/5.qmd
@@ -16,7 +16,7 @@ Three consituents:
 
 These are required to satisfy two commutative diagram relations (*snake equations*)
 
-\begin{tikzcd}
+\begin{tikzcd} \pagecolor{white}
     & c \arrow[ld, "\cong"'] &                                                              \\
     c\otimes I \arrow[d, "c \otimes \eta_c"']      &                        & I \otimes c \arrow[lu, "\cong"']                             \\
     c \otimes (c^* \otimes c) \arrow[rr, "\cong"'] &                        & (c \otimes c^*) \otimes c \arrow[u, "\epsilon_c \otimes c"']
@@ -26,7 +26,7 @@ These are required to satisfy two commutative diagram relations (*snake equation
 and
 
 
-\begin{tikzcd}
+\begin{tikzcd} \pagecolor{white}
     & c \arrow[rd, "\cong"] & \\
     c^*\otimes I \arrow[ru, "\cong"] & & I \otimes c^* \arrow[d, "\eta_c \otimes c^*"]   \\
     c^* \otimes (c \otimes c^*) \arrow[u, "c^* \otimes \epsilon_c"] & & (c^* \otimes c) \otimes c^* \arrow[ll, "\cong"] \end{tikzcd}
