--- a/docs/personal.qmd
+++ b/docs/personal.qmd
@@ -12,18 +12,18 @@ A non-exhaustive list of personal (not too-personal though) details:
 ### Activities
 - Sometimes writing [music](https://www.youtube.com/embed/EjZH9OW6eA0).
 - Sometimes writing puzzles. ([2021](https://2021.huntinality.com/puzzle/wahshington_post.html) [2022](https://www.huntinality.com/puzzles/worst_crossword_ever))
-- <abbr title="E.g. Borges, Nabokov, DFW, Calvino, John Williams, Kafka, Mann, Svevo, Bernhard, Camus, Wittgenstein, Kripke, Rorty, Brandom">Reading</abbr>.
-- Playing Go (even though I'm bad)
+- Reading.
+    - Some authors I've liked: Borges, Nabokov, DFW, Calvino, John Williams, Kafka, Mann, Svevo, Bernhard, Camus, Wittgenstein, Kripke, Rorty, Brandom
+- Playing [Go](https://online-go.com/player/583929/) (even though I'm bad)
 
 ### Likes
 - Spicy food (to the point of it being a personality trait)
-- [Cats](/images/kris1.jpeg) and capybaras.
+- [Cats](/images/kris1.jpeg) and [capybaras](https://youtu.be/QUqCWkPlLLc?t=89).
 - [Board games](https://boardgamegeek.com/collection/user/ksb2021)
-- 'Trolling' others (lightheartedly)
 - Classical music
 
 ### Dislikes
-- Being trolled (even lightheartedly)
+- Traveling
 
 ### Quirks
 - When eating peanuts, eating the whole shell, too.
