--- a/docs/math/sketches/3/4.qmd
+++ b/docs/math/sketches/3/4.qmd
@@ -38,7 +38,7 @@ title: Adjunctions and data migration
 
 
 -  We want to convert this state information into a graph that will let us visualize our machine.
-- Use the following [functor](3.qmd#functor) $F$: \begin{tikzcd}\overset{Arr}\bullet \arrow[red,d, "tar", bend left] \arrow[blue,d, "src"', bend right] &\overset{State}\bullet \arrow[red, loop below, "next"] \\\overset{Vert}\bullet&\end{tikzcd}
+- Use the following [functor](3.qmd#functor) $F$: \begin{tikzcd} \pagecolor{white}\overset{Arr}\bullet \arrow[red,d, "tar", bend left] \arrow[blue,d, "src"', bend right] &\overset{State}\bullet \arrow[red, loop below, "next"] \\\overset{Vert}\bullet&\end{tikzcd}
 
     - *src* is sent to identity
     - Can now generate a graph using the composite [functor](3.qmd#functor) $\mathbf{Gr}\xrightarrow{F}\mathbf{DDS}\xrightarrow{I}\mathbf{Set}$
@@ -57,7 +57,7 @@ title: Adjunctions and data migration
   $Vert = \bar{7}$
 
 
--  We can now draw the graph: \begin{tikzcd}& 1 \arrow[rd] && 2 \arrow[ld]&\\3 \arrow[rd] && 4 \arrow[ld] &&\\& 5&& 6 \arrow[r, bend left] & 7 \arrow[l, bend left]\end{tikzcd}
+-  We can now draw the graph: \begin{tikzcd} \pagecolor{white} & 1 \arrow[rd] && 2 \arrow[ld]&\\3 \arrow[rd] && 4 \arrow[ld] &&\\& 5&& 6 \arrow[r, bend left] & 7 \arrow[l, bend left]\end{tikzcd}
 - This procecure can be called "pulling back data along a [functor](3.qmd#functor)". We pulled back data $I$ along functor $F$ (via functor composition).
 
 
@@ -83,7 +83,7 @@ Consider the functor $\mathbf{Gr}\xrightarrow{G}\mathbf{DDS}$ given by sending *
 |6   |7   | 6  |
 |7   |6   | 7  |
 
-\begin{tikzcd}  & 1                       &                         & 2                     &                        \\3 &                         & 4 \arrow[lu] \arrow[ru] &                       &                        \\  & 5 \arrow[lu] \arrow[ru] &                         & 6 \arrow[r, bend left] & 7 \arrow[l,bend left]\end{tikzcd}
+\begin{tikzcd} \pagecolor{white}  & 1                       &                         & 2                     &                        \\3 &                         & 4 \arrow[lu] \arrow[ru] &                       &                        \\  & 5 \arrow[lu] \arrow[ru] &                         & 6 \arrow[r, bend left] & 7 \arrow[l,bend left]\end{tikzcd}
 
 :::
 :::
@@ -97,7 +97,7 @@ Consider the functor $\mathbf{Gr}\xrightarrow{G}\mathbf{DDS}$ given by sending *
 <div id="adjoint"/></div>
 -  For any $c \in C$ and $d \in D$, there is an [isomorphism](3.qmd#iso) of hom-sets: $\alpha_{c,d}: \mathcal{C}(c,R(d)) \xrightarrow{\cong} \mathcal{D}(L(c),d)$ that is natural in *c} and *d}.
 - Given a morphism $c \rightarrow{f} R(d)$ in $\mathcal{C}$, its image $g:=\alpha_{c,d}(f)$ is called its *mate} (and vice-versa)
-- To denote the adjunction we write $L \dashv R$ or \begin{tikzcd}\mathcal{C} \arrow[rr, "L", bend left] & \Rightarrow & \mathcal{D} \arrow[ll, "R", bend left]\end{tikzcd}
+- To denote the adjunction we write $L \dashv R$ or \begin{tikzcd} \pagecolor{white} \mathcal{C} \arrow[rr, "L", bend left] & \Rightarrow & \mathcal{D} \arrow[ll, "R", bend left]\end{tikzcd}
 
 :::
 ::: {.callout-caution icon=false collapse=false}
@@ -106,7 +106,7 @@ Consider the functor $\mathbf{Gr}\xrightarrow{G}\mathbf{DDS}$ given by sending *
 
 The [adjunction](#adjunction) called currying says $\mathbf{Set}(A \times B,C)\cong \mathbf{Set}(A,C^B)$
 
-\begin{tikzcd}Set \arrow[rr, "-\times B", bend left] & \Rightarrow & Set \arrow[ll, "(-)^B",bend left]\end{tikzcd}
+\begin{tikzcd} \pagecolor{white} Set \arrow[rr, "-\times B", bend left] & \Rightarrow & Set \arrow[ll, "(-)^B",bend left]\end{tikzcd}
 :::
 ::: {.callout-caution icon=false collapse=false}
 ## Galois connections are adjoint
@@ -151,7 +151,7 @@ The [adjunction](#adjunction) called currying says $\mathbf{Set}(A \times B,C)\c
 
 
 ## Left and right pushforward functors
-Given $\mathcal{C}\xrightarrow{F}\mathcal{D}$, the data migration functor $\Delta_F$ turns $\mathcal{D}$ instances to $\mathcal{C}$ instances. This functor has both a left and right adjoint: \begin{tikzcd}\mathcal{C}Inst \arrow[rr, "\Sigma_F", bend left] &  & \mathcal{D}Inst \arrow[ll, "\Delta_F"description] \arrow[ll, "\Pi_F", bend left]\end{tikzcd}
+Given $\mathcal{C}\xrightarrow{F}\mathcal{D}$, the data migration functor $\Delta_F$ turns $\mathcal{D}$ instances to $\mathcal{C}$ instances. This functor has both a left and right adjoint: \begin{tikzcd} \pagecolor{white} \mathcal{C}Inst \arrow[rr, "\Sigma_F", bend left] &  & \mathcal{D}Inst \arrow[ll, "\Delta_F"description] \arrow[ll, "\Pi_F", bend left]\end{tikzcd}
 
 | Migration Functor | Pronounced | Reminiscent of       | Database |idea                          |
 |---|--|---|--|--|
@@ -165,8 +165,8 @@ Given $\mathcal{C}\xrightarrow{F}\mathcal{D}$, the data migration functor $\Delt
 
 
 - Consider a functor which discards the distinction between Economy and First Class seats in an airplane.
-- \begin{tikzcd} & Money & \\ Econ \arrow[ru, "Price"] \arrow[rd, "Position"'] & & 1st \arrow[lu, "Price"'] \arrow[ld, "Position"] \\ & string & \end{tikzcd}
-- \begin{tikzcd} Money \\ Seat \arrow[u, "Price"] \arrow[d, "Position"'] \\ string \end{tikzcd}
+- \begin{tikzcd} \pagecolor{white} & Money & \\ Econ \arrow[ru, "Price"] \arrow[rd, "Position"'] & & 1st \arrow[lu, "Price"'] \arrow[ld, "Position"] \\ & string & \end{tikzcd}
+- \begin{tikzcd} \pagecolor{white} Money \\ Seat \arrow[u, "Price"] \arrow[d, "Position"'] \\ string \end{tikzcd}
 - The $\Delta$ functor is uninteresting - it will copy the rows for Seat into both Economy and First class.
 - The functor $\Pi$ puts into each airline seat only seats which are in both the Economy and First Class tables with the same price and position.
 - The functor $\Sigma$ puts all Economy and First Class seats into the Seat table and discards the information of from which table they came from.
@@ -236,6 +236,6 @@ Draw the instance $I$ in [this example](#emails) as a graph.
 
 ::: {.callout-note collapse=true appearance="minimal"}
 ## Solution
-\begin{tikzcd} && \overset{Sue}\bullet\arrow[r, "4", bend left] & \overset{Doug}\bullet \arrow[l, "5", bend left] \\ & \overset{Bob}\bullet \arrow[r, "1"] \arrow[d, "3"] \arrow[l, "6",loop left] &\overset{Grace}\bullet \arrow[r, "2"]& \overset{Pat}\bullet\\ &\overset{Emmy}\bullet&&\end{tikzcd}
+\begin{tikzcd} \pagecolor{white} && \overset{Sue}\bullet\arrow[r, "4", bend left] & \overset{Doug}\bullet \arrow[l, "5", bend left] \\ & \overset{Bob}\bullet \arrow[r, "1"] \arrow[d, "3"] \arrow[l, "6",loop left] &\overset{Grace}\bullet \arrow[r, "2"]& \overset{Pat}\bullet\\ &\overset{Emmy}\bullet&&\end{tikzcd}
 :::
 :::
